# minibudget

./: .gitignore  README.md  example.budget  minibudget.py  model.py  parse.py  parsers.py  pyproject.toml  render.py  requirements.txt  test.py  transform.py
budgets/: example.budget
docs/: budget-format.md  chart.md  cicd.md  convert.md  currency-formats.md  diff.md  report.md
minibudget/: convert.py  helpers.py  minibudget.py  model.py  parse.py  parsers.py  render.py  transform.py
