[tool.poetry]
name = "minibudget"
version = "0.1.0"
description = "A simple CLI tool for personal and small business budgeting."
authors = ["Frank Davies"]
readme = "README.md"
license="AGPL-3.0-or-later"

[tool.poetry.dependencies]
python = "^3.10"
rich = "^13.9.2"
beanquery = {version = "^0.1.dev0", optional = true}

[tool.poetry.extras]
convert = ["beanquery"]

[tool.poetry.scripts]
minibudget = "minibudget.minibudget:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
